--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>HTMLのサンプル</HTML>
+        <title>HTMLのサンプル</title>
         <link rel="stylesheet" type="text/css"
         href="web.css">
     </head>
