余分な㋐を除く

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <p>これは簡単なHTMLのサンプルです</p>
-        <p>試しにもう1段落追加㋐してみよう</p>
+        <p>試しにもう1段落追加してみよう</p>
     </body>
 </html>
 
